--- a/package.json
+++ b/package.json
@@ -21,14 +21,20 @@
   },
   "homepage": "https://github.com/hiroyky/shuffle_luncher#readme",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.3",
     "@types/chai": "^4.1.3",
     "@types/mocha": "^5.2.0",
     "@types/sinon": "^4.3.1",
+    "aws-lambda": "^0.1.2",
+    "aws-sdk": "^2.229.1",
     "chai": "^4.1.2",
     "child_process": "^1.0.2",
     "mocha": "^5.1.1",
     "sinon": "^4.5.0",
     "ts-node": "^6.0.1",
     "typescript": "^2.8.3"
+  },
+  "dependencies": {
+    "@slack/client": "^4.2.0"
   }
 }
